--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,5 @@
-mkdocs-material==5.5.9
+mkdocs==1.1.2
+mkdocs-material==5.5.11
 mdx_gh_links
 mkdocs-markdownextradata-plugin
 mkdocs-git-revision-date-plugin
