issue-21: Import the beginning of README.md directly into index.md to avoid having to copy/paste text around and keeping things in sync manually.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -41,6 +41,8 @@ markdown_extensions:
   - attr_list
   - meta
   - mdx_gh_links
+  - mdx_include:
+      base_path: ./content
   - toc:
       permalink: true
   - pymdownx.extra
