--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,10 @@
 mkdocs==1.1.2
 mkdocs-material==5.5.11
-mdx_gh_links
-mkdocs-markdownextradata-plugin
-mkdocs-git-revision-date-plugin
-mkdocs-redirects
-mkdocs-htmlproofer-plugin
+mdx_gh_links==0.2
+mdx_include==1.3.3
+mkdocs-markdownextradata-plugin==0.1.7
+mkdocs-git-revision-date-plugin==0.3
+mkdocs-redirects==1.0.1
+mkdocs-htmlproofer-plugin==0.0.3
 mkdocs-pom-parser-plugin>=1.0.3
 mkdocs-minify-plugin==0.3.0
