--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
         <version.junit>5.7.0</version.junit>
         <version.mockito>3.7.7</version.mockito>
         <version.marschall.memoryfilesystem>2.1.0</version.marschall.memoryfilesystem>
+        <version.testcontainers>1.15.1</version.testcontainers>
     </properties>
 
     <build>
@@ -268,7 +269,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.15.1</version>
+            <version>${version.testcontainers}</version>
             <scope>test</scope>
         </dependency>
 
